# rustskill

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  install.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/client/: downloader.rs
src/core/: installer.rs
