[package]
name = "rustskill"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
console = "0.15"
indicatif = "0.18.4"
comfy-table = "7.2.2"
self_update = { version = "0.41", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "rustls"
] }
confy = "2.0.0"