[package]
name = "rustskill"
version = "0.1.9"
edition = "2021"

[dependencies]
# CLI & UI
clap = { version = "4.4", features = ["derive"] }
console = "0.15"
indicatif = "0.18.4"
comfy-table = "7.2.2"

# Network & Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling & Config
anyhow = "1.0"
confy = "0.6"
dirs = "5.0"

# Filesystem
walkdir = "2.4"

# Update System
self_update = { version = "0.41", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "rustls"
] }
toml = "0.8.23"